--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "native-base": "^2.1.1",
     "react": "16.0.0-alpha.6",
-    "react-native": "0.43.1"
+    "react-native": "0.43.1",
+    "react-native-snap-carousel": "^2.1.1"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
