--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.1.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.1",
+    "react-native-easy-grid": "^0.1.8",
     "react-native-snap-carousel": "^2.1.1"
   },
   "devDependencies": {
